name:                servant-example
version:             0.1
synopsis:            An example web-service using servant/servant-scotty/servant-postgresql/servant-pool
homepage:            http://github.com/zalora/servant
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@zalora.com
copyright:           2014 Zalora SEA
category:            Web, Database
build-type:          Simple
cabal-version:       >=1.10

executable servant-example
  main-is:             Main.hs
  other-modules:       Model.User
  build-depends:
  	  base >=4.5 && <5
  	, servant >= 0.1
  	, servant-scotty >= 0.1
  	, servant-postgresql >= 0.1
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010