name:                servant-pool
version:             0.1.0.0
synopsis:            Utility functions for creating servant 'Context's with "context/connection pooling" support
description:         Utility functions for creating servant 'Context's with "context/connection pooling" support
                     .
                     This package relies on the excellent <http://hackage.haskell.org/package/resource-pool resource-pool> library.
homepage:            http://github.com/zalora/servant-pool
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@zalora.com
copyright:           2014 Zalora SEA
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Context.Pool
  build-depends:       
      base >=4 && <5
    , servant >= 0.1
    , resource-pool >= 0.2
    , time >= 1.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O