name:                servant-postgresql
version:             0.1
synopsis:            Useful functions and instances for using servant with a PostgreSQL context
description:         Useful functions and instances for using servant with a PostgreSQL context
homepage:            http://github.com/zalora/servant-postgresql
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@zalora.com
copyright:           2014 Zalora SEA
category:            Web, Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Context.PostgreSQL
  build-depends:       
      base >=4 && <5
    , servant >= 0.1
    , servant-pool >= 0.1
    , postgresql-simple >= 0.4
    , bytestring >= 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O