name:                servant-response
version:             0.1
synopsis:            Machinery to express how servant should turn results of database operations into proper JSON-encodable response types
description:         Machinery to express how servant should turn results of database operations into proper JSON-encodable response types
homepage:            http://github.com/zalora/servant
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@zalora.com
copyright:           2014 Zalora SEA
category:            Web
build-type:          Simple 
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Response, Servant.Response.Prelude 
  build-depends:
      base >=4.5 && <5
    , aeson >= 0.7
    , http-types >= 0.8
    , text >= 1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O -Wall