name:                servant-scotty
version:             0.1.0.0
synopsis:            Generate a web service for servant 'Resource's using scotty
description:         Generate a web service for servant 'Resource's using scotty
homepage:            http://github.com/zalora/servant
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@zalora.com
copyright:           2014 Zalora SEA
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
      Servant.Scotty
    , Servant.Scotty.Arguments
    , Servant.Scotty.Op
    , Servant.Scotty.Prelude
    , Servant.Scotty.Response
  build-depends:
      base >=4 && <5
    , http-types >= 0.8
    , servant >= 0.1
    , scotty >= 0.8
    , text >= 0.11
    , transformers >= 0.4
    , aeson >= 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
