name:                servant-scotty
version:             0.1
synopsis:            Generate a web service for servant 'Resource's using scotty and JSON
description:         Generate a web service for servant 'Resource's using scotty and JSON
homepage:            http://github.com/zalora/servant
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@zalora.com
copyright:           2014 Zalora SEA
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Servant.Scotty
    , Servant.Scotty.Arguments
    , Servant.Scotty.Op
    , Servant.Scotty.Prelude
    , Servant.Scotty.Response
  build-depends:
      base >=4 && <5
    , http-types >= 0.8
    , servant >= 0.1
    , servant-response >= 0.1
    , scotty >= 0.8
    , text >= 0.11
    , transformers >= 0.4
    , aeson >= 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O -Wall
