name:                servant
version:             0.1
synopsis:            A library to generate REST-style webservices on top of scotty, handling all the boilerplate for you
description:         
  An abstraction for 'Resource's that can support any number
  of operations, which will be tagged at the type-level.
  .
  This package however does provide standard /REST-y/ operations
  ('Servant.Operation.Add', 'Servant.Operation.Delete', 'Servant.Operation.ListAll'
  , 'Servant.Operation.Update' and 'Servant.Operation.View') and lets you define your
  own.
  .
  You can then actually make a service out of a 'Servant.Resource.Resource' description
  using any backend you like (we currently only provide a
  <http://hackage.haskell.org/package/scotty scotty> backend in
  the /servant-scotty/ package).
homepage:            http://github.com/zalora/servant
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alp@zalora.com
copyright:           2014 Zalora SEA
category:            Web, Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Servant.Context
    , Servant.Error
    , Servant.Prelude
    , Servant.Resource
  build-depends:
    base >=4 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O -Wall
